--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,13 @@
 [build]
   command = "bun run build"
   publish = "dist"
+  environment = { NODE_VERSION = "18" }
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200 
+  status = 200
+
+[build.environment]
+  NODE_VERSION = "18"
+  BUN_VERSION = "1.0.0" 
