--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "build": "tsc && vite build",
+    "build:dev": "tsc && vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -49,8 +49,6 @@
     "framer-motion": "^12.11.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
-    "next": "^15.3.2",
-    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
