--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,14 @@
 [build]
   command = "bun run build"
   publish = "dist"
-  environment = { NODE_VERSION = "18" }
+
+[build.environment]
+  NODE_VERSION = "18"
+  BUN_VERSION = "1.0.0"
+  NPM_FLAGS = "--legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build.environment]
-  NODE_VERSION = "18"
-  BUN_VERSION = "1.0.0" 
+  force = true 
