--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.11.0",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
